Réglage d'un bug d'affichage sur Firefox Les éléments SVG qui servent de flèche sur les TextSlider ne diminuaient pas en taille en version mobile sur Firefox. J'ai ajouté une class pour contrer ce problème.

--- a/src/styles/layout/_textSlider.scss
+++ b/src/styles/layout/_textSlider.scss
@@ -82,7 +82,7 @@
         }
     }
 
-    svg {
+    &__svg {
         @include mobile-only {
             transform: scale(64%, 64%) translateX(10px);
             transform-origin: 50% 50%;
@@ -117,7 +117,7 @@
         }
     }
 
-    svg {
+    &__svg {
         @include mobile-only {
             transform: scale(64%, 64%) translateX(10px);
             transform-origin: 50% 50%;
